# osm3denv

./: .gitignore  README.md  pyproject.toml
old/osm3denv/: cli.py  config.py
old/osm3denv/assets/materials/: osm3d.material  (+2 more)
old/osm3denv/fetch/: textures.py
old/osm3denv/mesh/: areas.py  buildings.py  crossings.py  drape.py  fountains.py  sample.py  trees.py
old/osm3denv/render/: app.py  sky.py
osm3denv/: __main__.py  cache.py  cli.py  config.py  entity.py  frame.py  layer.py  logging.py
osm3denv/assets/compositors/: osm3denv.compositor
osm3denv/assets/materials/: osm3d.material  osm3d.program
osm3denv/assets/shaders/: area.frag  area_pbr.frag  asphalt.frag  asphalt_pbr.frag  buildings.frag  buildings_pbr.frag  road_pbr.frag  sky.frag  sky.vert  terrain.frag  terrain.vert  terrain_pbr.frag  trees.frag  water.frag  water.vert
osm3denv/entities/: beach.py  buildings.py  clouds.py  coastline.py  fences.py  powerlines.py  roads.py  sea.py  streetlamps.py  terrain.py  utils.py  vegetation.py  water.py
osm3denv/fetch/: meshes.py  models.py  osm.py  srtm.py  terrarium.py  textures.py
osm3denv/mesh/: areas.py  buildings.py  coastline.py  drape.py  furniture.py  geom.py  monuments.py  roads.py  sample.py  sea.py  terrain.py  trees.py  utils.py  water.py
osm3denv/render/: app.py  camera.py  helpers.py  materials.py  minimap.py  plants.py  upload.py
osm3denv/render/procedural/: house.py
osm3denv/render/shaders/: building.frag  building.vert  building_glass.frag  clouds.frag  clouds.vert  fence.frag  fence.vert  lake.frag  lake.vert  minimap.frag  minimap.vert  road.frag  sea.frag  sea.vert  terrain.frag  terrain.vert  vegetation.frag  vegetation.vert
proceduralbuilding/: pyproject.toml
proceduralbuilding/examples/: viewer.py
proceduralbuilding/procbuilding/: __init__.py  _viewer.py  _viewer_entry.py  params.py  registry.py  textures.py
proceduralbuilding/procbuilding/buildings/: __init__.py  base.py
proceduralbuilding/procbuilding/buildings/residential/: __init__.py  base_house.py  base_params.py  component_params.py  house.py  params.py  polygon_house.py  polygon_params.py
proceduralbuilding/procbuilding/components/: __init__.py  ac_unit.py  balcony.py  base.py  chimney.py  edge_wall.py  floor_slab.py  polygon_slab.py  roof.py  wall.py
proceduralbuilding/procbuilding/geometry/: __init__.py  builder.py  polygon.py
(+17 files in other folders)
