[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osm3denv"
version = "0.1.0"
description = "Render a 3D environment (terrain + buildings + roads + water) around any lat/lon using OSM and SRTM"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ogre-python>=14.5,<15",
    "pyproj>=3.6",
    "shapely>=2.0",
    "numpy>=1.26",
    "mapbox-earcut>=1.0",
    "rasterio>=1.3",
    "overpy>=0.7",
    "requests>=2.31",
    "click>=8.1",
    "platformdirs>=4",
    "pygltflib>=1.16",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
osm3denv = "osm3denv.cli:main"

[tool.setuptools.packages.find]
include = ["osm3denv*"]
exclude = ["tests*", "venv*"]

[tool.setuptools.package-data]
osm3denv = [
    "assets/shaders/*.vert",
    "assets/shaders/*.frag",
    "assets/shaders/*.geom",
    "assets/materials/*.material",
    "assets/materials/*.program",
]
