[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "osm3denv"
version = "0.2.0"
description = "Render a 3D terrain around any lat/lon using OSM and SRTM (Panda3D)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Davide Gessa" }]
requires-python = ">=3.10"
dependencies = [
    "panda3d>=1.10.14",
    "numpy>=1.26",
    "pyproj>=3.6",
    "shapely>=2.0",
    "requests>=2.31",
    "click>=8.1",
    "platformdirs>=4",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
osm3denv = "osm3denv.cli:main"

[tool.setuptools.packages.find]
include = ["osm3denv*"]
exclude = ["old*", "tests*", "venv*"]
