[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procbuilding"
version = "0.1.0"
description = "Procedural 3D building generator for Panda3D"
requires-python = ">=3.11"
dependencies = [
    "panda3d>=1.10",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
procbuilding-viewer = "procbuilding._viewer_entry:main"

[project.entry-points."procbuilding.buildings"]
residential_house = "procbuilding.buildings.residential.house:ResidentialHouse"

[tool.setuptools.packages.find]
where = ["src"]
